# milona

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  deny.toml  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: ci.yml
crates/milona-adapter/: Cargo.toml
crates/milona-adapter/src/: budget.rs  lib.rs  mock.rs  retry.rs
crates/milona-core/: Cargo.toml
crates/milona-core/src/: authz.rs  document.rs  error.rs  lib.rs  tenant.rs  traits.rs
crates/milona-ingest/: Cargo.toml
crates/milona-ingest/src/: chunker.rs  embedder.rs  error.rs  lib.rs
crates/milona-ingest/src/sources/: mod.rs  pdf_file.rs  text_file.rs  web.rs
crates/milona-knowledge/: Cargo.toml
crates/milona-knowledge/src/: fakes.rs  genai_loop.rs  lib.rs  registry.rs
crates/milona-presenter/: Cargo.toml
crates/milona-presenter/src/: app.rs  auth.rs  cli.rs  handlers.rs  lib.rs  main.rs  otel.rs  rate_limit.rs  state.rs
crates/milona-presenter/tests/: api.rs
crates/milona-storage/: Cargo.toml
crates/milona-storage/src/: backend.rs  lib.rs  memory.rs
crates/milona-storage/src/mongo/: graph.rs  mod.rs  vector.rs
crates/milona-storage/tests/: mongo_integration.rs
crates/milona-tools/: Cargo.toml
crates/milona-tools/src/: lib.rs  mcp.rs  registry.rs
crates/milona-tools/src/native/: calculator.rs  current_time.rs  echo.rs  mod.rs
