[workspace]
resolver = "2"
members = [
    "crates/milona-core",
    "crates/milona-ingest",
    "crates/milona-storage",
    "crates/milona-knowledge",
    "crates/milona-tools",
    "crates/milona-adapter",
    "crates/milona-presenter",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.87"

[workspace.dependencies]
milona-core = { path = "crates/milona-core" }
milona-ingest = { path = "crates/milona-ingest" }
milona-storage = { path = "crates/milona-storage" }
milona-knowledge = { path = "crates/milona-knowledge" }
milona-tools = { path = "crates/milona-tools" }
milona-adapter = { path = "crates/milona-adapter" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
