[package]
name = "milona-presenter"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "milona"
path = "src/main.rs"

[features]
default = []
# Opt-in OpenTelemetry tracing seam (see src/otel.rs). Off by default: ROADMAP.md notes
# the Rust OTel tracing API/SDK is still Beta upstream, so no `opentelemetry*` crates are
# pulled in unless a deployment explicitly opts in with `--features otel`.
otel = []

[dependencies]
milona-core.workspace = true
milona-knowledge.workspace = true
milona-adapter.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

axum = "0.8"
clap = { version = "4", features = ["derive"] }
governor = "0.10"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
