[package]
name = "milona-presenter"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "milona"
path = "src/main.rs"

[features]
default = []
# Opt-in OpenTelemetry tracing seam (see src/otel.rs). Off by default: ROADMAP.md notes
# the Rust OTel tracing API/SDK is still Beta upstream, so no `opentelemetry*` crates are
# pulled in unless a deployment explicitly opts in with `--features otel`.
otel = []

[dependencies]
milona-core.workspace = true
milona-knowledge.workspace = true
milona-adapter.workspace = true
milona-storage.workspace = true
milona-tools.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

axum = "0.8"
clap = { version = "4", features = ["derive"] }
governor = "0.10"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Only used to construct a `mongodb::Client` for the optional
# `MILONA_STORAGE_BACKEND=mongo` composition-root path (src/state.rs);
# `milona-storage` owns the actual `VectorStore`/`GraphStore` query logic.
# Pinned identically to `milona-storage`'s own pin: mongodb>=3.7 transitively
# requires rustc>=1.88 (darling 0.23/serde_with 3.21/time 0.3.53), and this
# workspace pins rust-version = 1.87. Re-evaluate together with
# milona-storage's pin once the workspace MSRV moves to >=1.88.
mongodb = { version = "=3.6.0", default-features = false, features = [
    "rustls-tls",
    "bson-2",
    "compat-3-3-0",
] }

[dependencies.darling]
version = "=0.20.11"

[dependencies.serde_with]
version = "=3.9.0"

[dependencies.time]
version = "=0.3.36"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
